--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
   <style>
     body { font-family: Arial; margin:0; background:#f2f2f2; }
     header { background:white; padding:15px; font-size:22px; font-weight:bold; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
-    .container { padding:15px; max-width:500px; margin:auto; }
+    .container { padding:15px; max-width:600px; margin:auto; }
     .card { background:white; padding:15px; margin-bottom:15px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
-    button { background:#fc8019; color:white; border:none; padding:10px; width:100%; border-radius:6px; font-size:16px; }
-    select, input { width:100%; padding:8px; margin:8px 0; border-radius:5px; border:1px solid #ccc; }
+    button { background:#fc8019; color:white; border:none; padding:10px; width:100%; border-radius:6px; font-size:16px; cursor:pointer; }
+    select, input, textarea { width:100%; padding:8px; margin:8px 0; border-radius:5px; border:1px solid #ccc; }
     h3 { margin-top:0; }
+    hr { border:0; border-top:1px solid #ccc; }
+    #profileCard img { width:80px; height:80px; border-radius:50%; margin-bottom:10px; }
   </style>
 </head>
 
@@ -29,40 +31,82 @@
 
 <div class="container">
 
-<div class="card">
-<h3>Customer Login (Phone OTP)</h3>
-<input type="text" id="phone" placeholder="+91XXXXXXXXXX">
-<div id="recaptcha-container"></div>
-<button onclick="sendOTP()">Send OTP</button>
-<input type="text" id="otp" placeholder="Enter OTP">
-<button onclick="verifyOTP()">Verify OTP</button>
-</div>
+  <!-- Customer Profile -->
+  <div class="card" id="profileCard" style="display:none; text-align:center;">
+    <img id="profilePic" src="" alt="Profile Picture">
+    <h3 id="profileName"></h3>
+    <p id="profileEmail"></p>
+    <button onclick="logout()" style="background:#ff4d4d;">Logout</button>
+  </div>
 
-<div class="card">
-<h3>Place Order</h3>
+  <!-- Customer Login -->
+  <div class="card">
+    <h3>Customer Login</h3>
+    <button onclick="googleLogin()" style="background:#4285F4; color:white;">Login with Google</button>
+    <hr>
+    <input type="email" id="emailLogin" placeholder="Enter Email">
+    <input type="password" id="passwordLogin" placeholder="Enter Password">
+    <button onclick="emailLogin()">Login with Email</button>
+    <button onclick="emailRegister()">Register</button>
+  </div>
 
-<label>Select Delivery Location</label>
-<select id="location">
-  <option value="local">Ravulapalem</option>
-  <option value="district">District</option>
-  <option value="state">Andhra Pradesh</option>
-  <option value="otherState">Other State</option>
-</select>
+  <!-- Customer Details Form -->
+  <div class="card" id="customerCard" style="display:none;">
+    <h3>Customer Details</h3>
+    <label>Name</label>
+    <input type="text" id="custName" placeholder="Enter your full name">
+    <label>Phone Number</label>
+    <input type="text" id="custPhone" placeholder="+91XXXXXXXXXX">
+    <label>Delivery Address</label>
+    <input type="text" id="custAddress" placeholder="Street, City, PIN">
+    <button onclick="saveCustomerDetails()">Save Details</button>
+  </div>
 
-<label>Enter Product Amount (₹)</label>
-<input type="number" id="amount" placeholder="Example: 900">
+  <!-- Products -->
+  <div class="card" id="productsCard">
+    <h3>Our Products</h3>
+    <div class="product" style="border:1px solid #ccc; padding:10px; margin-bottom:10px; border-radius:6px;">
+      <h4>Chicken Boneless Pickle</h4>
+      <p>Price: ₹900 / kg</p>
+      <label>Quantity (kg)</label>
+      <input type="number" min="1" value="1" class="productQty" data-price="900">
+      <button onclick="addToCart(this)">Add to Cart</button>
+    </div>
+    <div class="product" style="border:1px solid #ccc; padding:10px; margin-bottom:10px; border-radius:6px;">
+      <h4>Mutton Boneless Pickle</h4>
+      <p>Price: ₹1650 / kg</p>
+      <label>Quantity (kg)</label>
+      <input type="number" min="1" value="1" class="productQty" data-price="1650">
+      <button onclick="addToCart(this)">Add to Cart</button>
+    </div>
+  </div>
 
-<button onclick="payNow()">Pay Now</button>
+  <!-- Place Order -->
+  <div class="card">
+    <h3>Place Order</h3>
+    <label>Select Delivery Location</label>
+    <select id="location">
+      <option value="local">Ravulapalem</option>
+      <option value="district">District</option>
+      <option value="state">Andhra Pradesh</option>
+      <option value="otherState">Other State</option>
+    </select>
+    <button onclick="payNow()">Pay Now</button>
+    <p id="totalText"></p>
+  </div>
 
-<p id="totalText"></p>
-
-</div>
+  <!-- Customer Help Desk -->
+  <div class="card" id="helpDeskCard">
+    <h3>Customer Help Desk</h3>
+    <label>Your Message</label>
+    <textarea id="helpMessage" placeholder="Write your query or feedback..." rows="4"></textarea>
+    <button onclick="sendHelpMessage()">Send Message</button>
+  </div>
 
 </div>
 
 <script>
-
-// Initialize Firebase
+// Firebase Init
 firebase.initializeApp({
   apiKey: "AIzaSyCHg-gxVV-vuALSZgcGBabChPZnznTlySg",
   authDomain: "sr-food-wonders-demo.firebaseapp.com",
@@ -71,77 +115,194 @@ firebase.initializeApp({
   messagingSenderId: "895619294540",
   appId: "1:895619294540:web:72cee3f5756daa116b1be9"
 });
-
 const auth = firebase.auth();
 const db = firebase.firestore();
 
-// Recaptcha setup
-window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('recaptcha-container', {
-  size: 'normal'
-});
-
-// Send OTP
-function sendOTP(){
-  const phone = document.getElementById('phone').value;
-  auth.signInWithPhoneNumber(phone, window.recaptchaVerifier)
-    .then(function(result){
-      window.confirmationResult = result;
-      alert("OTP Sent Successfully");
-    })
-    .catch(function(error){
-      alert(error.message);
-    });
+// Show Profile
+function showProfile(user) {
+  document.getElementById("profileCard").style.display = "block";
+  document.getElementById("profileName").innerText = user.displayName || document.getElementById("custName").value;
+  document.getElementById("profileEmail").innerText = user.email;
+  document.getElementById("profilePic").src = user.photoURL || "https://via.placeholder.com/80";
 }
 
-// Verify OTP
-function verifyOTP(){
-  const otp = document.getElementById('otp').value;
-  confirmationResult.confirm(otp)
-    .then(function(){
-      alert("Login Successful");
-    })
-    .catch(function(error){
-      alert("Invalid OTP");
-    });
+// Google Login
+function googleLogin() {
+  const provider = new firebase.auth.GoogleAuthProvider();
+  auth.signInWithPopup(provider)
+    .then((result) => {
+      const user = result.user;
+      alert("Login Successful! Welcome " + user.displayName);
+      showProfile(user);
+      document.getElementById("customerCard").style.display = "block";
+      document.getElementById("custName").value = user.displayName || "";
+      listenShipping(user.uid);
+    }).catch((error) => alert(error.message));
 }
 
-// Payment Function
+// Email Login/Register
+function emailLogin() {
+  const email = document.getElementById("emailLogin").value;
+  const password = document.getElementById("passwordLogin").value;
+  if(!email || !password){ alert("Enter email and password"); return; }
+  auth.signInWithEmailAndPassword(email, password)
+    .then((result) => {
+      const user = result.user;
+      alert("Login Successful! Welcome " + user.email);
+      showProfile(user);
+      document.getElementById("customerCard").style.display = "block";
+      listenShipping(user.uid);
+    }).catch((error) => alert(error.message + "\nIf user not registered, please register first."));
+}
+function emailRegister() {
+  const email = document.getElementById("emailLogin").value;
+  const password = document.getElementById("passwordLogin").value;
+  if(!email || !password){ alert("Enter email and password"); return; }
+  auth.createUserWithEmailAndPassword(email, password)
+    .then(() => alert("Registration successful! Please login now."))
+    .catch((error) => alert(error.message));
+}
+
+// Logout
+function logout() {
+  auth.signOut().then(() => {
+    alert("Logged out successfully!");
+    document.getElementById("profileCard").style.display = "none";
+    document.getElementById("customerCard").style.display = "none";
+    document.getElementById("custName").value = "";
+    document.getElementById("custPhone").value = "";
+    document.getElementById("custAddress").value = "";
+  });
+}
+
+// Customer Details
+function saveCustomerDetails() {
+  const name = document.getElementById("custName").value;
+  const phone = document.getElementById("custPhone").value;
+  const address = document.getElementById("custAddress").value;
+  const user = auth.currentUser;
+  if(!user){ alert("Please login first"); return; }
+  if(!name || !phone || !address){ alert("Please fill all details"); return; }
+  db.collection('users').doc(user.uid).set({
+    name, phone, address, email: user.email, profilePic: user.photoURL
+  }, { merge:true }).then(() => alert("Customer details saved successfully!"))
+    .catch((error) => alert(error.message));
+}
+
+// Products & Cart
+let cart = [];
+function addToCart(btn) {
+  const productDiv = btn.parentElement;
+  const name = productDiv.querySelector("h4").innerText;
+  const price = Number(productDiv.querySelector(".productQty").dataset.price);
+  const qty = Number(productDiv.querySelector(".productQty").value);
+  cart.push({ name, price, qty });
+  alert(name + " added to cart!");
+}
+
+// Payment
 async function payNow(){
-
+  if(cart.length === 0){ alert("Please add products to cart first!"); return; }
   const location = document.getElementById("location").value;
-  const amount = Number(document.getElementById("amount").value);
-
-  if(!amount){
-    alert("Enter product amount");
-    return;
-  }
-
   const doc = await db.collection("settings").doc("shipping").get();
-  const shipping = doc.data()[location];
-
-  const total = amount + shipping;
-
+  const shipping = doc.exists ? doc.data()[location] || 0 : 0;
+  let totalAmount = 0;
+  cart.forEach(item => totalAmount += item.price * item.qty);
+  const total = totalAmount + shipping;
   document.getElementById("totalText").innerHTML = 
-    "Product ₹"+amount+" + Shipping ₹"+shipping+" = Total ₹"+total;
+    "Products ₹"+totalAmount+" + Shipping ₹"+shipping+" = Total ₹"+total;
 
   var options = {
-    "key": "rzp_live_SI5VMj6l9U45sn",
-    "amount": total * 100,
-    "currency": "INR",
-    "name": "SR FOOD'S",
-    "description": "Food Order Payment",
-    "handler": function (response){
-        alert("Payment Successful! Payment ID: " + response.razorpay_payment_id);
+    key: "rzp_live_SI5VMj6l9U45sn",
+    amount: total*100,
+    currency: "INR",
+    name: "SR FOOD'S",
+    description: "Food Order Payment",
+    handler: function(response){
+      alert("Payment Successful! Payment ID: " + response.razorpay_payment_id);
+      saveOrder(response.razorpay_payment_id);
     },
-    "theme": {
-        "color": "#fc8019"
-    }
+    theme:{ color:"#fc8019" }
   };
-
   var rzp1 = new Razorpay(options);
   rzp1.open();
 }
 
+// Save Order
+function saveOrder(paymentId){
+  const user = auth.currentUser;
+  const location = document.getElementById("location").value;
+  db.collection("orders").add({
+    userId:user.uid,
+    name:document.getElementById("custName").value,
+    phone:document.getElementById("custPhone").value,
+    address:document.getElementById("custAddress").value,
+    cart:cart,
+    location:location,
+    paymentId:paymentId,
+    status:"pending",
+    timestamp:firebase.firestore.FieldValue.serverTimestamp()
+  }).then(()=>{ alert("Order saved successfully!"); cart=[]; });
+}
+
+// Help Desk
+function sendHelpMessage() {
+  const message = document.getElementById("helpMessage").value;
+  const user = auth.currentUser;
+  if(!user){ alert("Please login first"); return; }
+  if(!message){ alert("Please enter your message."); return; }
+  db.collection("helpdesk").add({
+    userId:user.uid,
+    name:document.getElementById("custName").value,
+    email:user.email,
+    message,
+    timestamp:firebase.firestore.FieldValue.serverTimestamp(),
+    status:"pending"
+  }).then(()=>{
+    alert("Your message has been sent! Our team will contact you soon.");
+    document.getElementById("helpMessage").value="";
+  }).catch((error)=>alert("Error sending message: "+error.message));
+}
+
+// Notifications
+function listenShipping(userId){
+  db.collection("orders").where("userId","==",userId)
+    .onSnapshot(snapshot=>{
+      snapshot.docChanges().forEach(change=>{
+        if(change.type==="modified"){
+          const order = change.doc.data();
+          alert("Update: Your order is now "+order.status);
+        }
+      });
+    });
+}
+
+db.collection("orders").onSnapshot(snapshot=>{
+  snapshot.docChanges().forEach(change=>{
+    if(change.type==="added"){
+      const order = change.doc.data();
+      alert("New Order Placed! by "+order.name);
+    }
+  });
+});
+
+db.collection("users").onSnapshot(snapshot=>{
+  snapshot.docChanges().forEach(change=>{
+    if(change.type==="added"){
+      const user = change.doc.data();
+      alert("New Customer Login: "+user.name+" ("+user.email+")");
+    }
+  });
+});
+
+db.collection("helpdesk").where("status","==","pending").onSnapshot(snapshot=>{
+  snapshot.docChanges().forEach(change=>{
+    if(change.type==="added"){
+      const msg = change.doc.data();
+      alert("New Help Desk Message from "+msg.name+": "+msg.message);
+    }
+  });
+});
 </script>
 
 </body>
